Possible to resize out of bounds https://bugs.webkit.org/show_bug.cgi?id=103521

Reviewed by Jocelyn Turcotte.

Enforce the viewportBounds after resize, and ensure a user fitted page remains
fit on viewport resize, but not on content growth.

* UIProcess/API/qt/tests/qmltests/WebView/tst_resize.qml: Added.
* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::didChangeContentsSize):
(WebKit::PageViewportController::didChangeViewportAttributes):
(WebKit::PageViewportController::updateMinimumScaleToFit):
* UIProcess/PageViewportController.h:
(PageViewportController):

git-svn-id: svn://svn.chromium.org/blink/trunk@136129 bbb929c8-8fbe-4397-9dbb-9b2b20218538